# garmin-flight-viewer

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  appwrite.json  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.claude/: launch.json
docs/: notices.md
public/: app-sw.js  manifest.webmanifest  notification-sw.js
scripts/: add-exercise-ids-to-maneuver-sections.mjs  add-instructor-flight-document-permissions.mjs  add-soft-delete.mjs  audit-saga-import-db.mjs  backfill-block-time.mjs  backfill-cakto-receipts.mjs  backfill-training-snapshots.mjs  centralize-school-id.mjs  cleanup-data.mjs  cleanup-flights-keep-with-media.mjs  cleanup-users.mjs  dedupe-instructor-admission-stages.mjs  delete-all-flights.mjs  delete-all-users.mjs  delete-may-2026-dry-run.mjs  delete-may-2026-execute.mjs  deploy-admin-function.mjs  deploy-admin-users-function.mjs  deploy-cakto-webhook.mjs  deploy-instructor-patch-function.mjs  deploy-schedule-booking.mjs  diagnose-default-track.mjs  diagnose-notifications.mjs  fetch-saga-import-executions.mjs  find-saga-import-execution.mjs  fix-admin-collection-permissions.mjs  fix-broken-planned-flight-student-mapping.mjs  fix-flight-review-permissions.mjs  fix-flight-schedule-permissions.mjs  fix-flight-student-permissions.mjs  fix-flight-student-update-permissions.mjs  fix-photo-permissions.mjs  (+132 more)
tauri-video-helper/src-tauri/: Cargo.toml  tauri.conf.json
tauri-video-helper/src-tauri/capabilities/: default.json
tauri-video-helper/src-tauri/src/: ffmpeg.rs  jobs.rs  lib.rs  main.rs  overlay.rs  pipeline.rs  server.rs
(+447 files in other folders)
